changed image positions

--- a/style.css
+++ b/style.css
@@ -81,4 +81,8 @@ figcaption{
         height: 20vh;
         align-items: center;
     }
+    .image-position img{
+        position: absolute;
+        bottom: -25%;
+    }
 }
